# zstdpy

./: .gitignore  LICENSE  README  SConstruct  buildwasm.sh  pyproject.toml  streaming_decompression.py  zstddec.py  zstddec.wasm  zstddeclib.c  zstddeclib.c.zst
dezstd/: README.rst  SConstruct  cdefs.py  dezstd.py  pyproject.toml  zstddeclib.c
